# OpenGLMINI

./: CMakeLists.txt  LICENSE  README.md
renderer/: CMakeLists.txt  application.cpp  application.h  cglpipeline.cpp  cglpipeline.h  color.h  framebuffer.h  global_context.cpp  global_context.h  mainwindow.cpp  mainwindow.h  matrix.h  mesh.cpp  mesh.h  mesh_io.cpp  mesh_io.h  program.h  rasterizer.cpp  rasterizer.h  rasterizer_main.cpp  rasterizer_state.h  shader.h  vector.h
